--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,4 +58,49 @@ img {
   border-radius: 10px;
   margin-left: 30px;
   font-size: 13px;
+}
+
+.main {
+  background-color: #f5f5f5;
+}
+.main-block {
+  display: flex;
+  padding: 40px 0 15px;
+}
+.main-text {
+  flex-basis: 50%;
+}
+.main-text__title {
+  font-size: 41px;
+  color: #333;
+  padding-right: 200px;
+  line-height: 55px;
+  margin: 45px 0;
+}
+.main-text__subtitle {
+  font-size: 20px;
+  line-height: 65px;
+  color: #333;
+}
+.main-image {
+  margin-right: -55px;
+}
+.main-list {
+  margin: 60px 0 0 0;
+  padding: 0;
+}
+.main-list__item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.main-list__image {
+  width: 40px;
+  height: 40px;
+  border: 2px solid #ffd200;
+  display: flex;
+  align-items: center;
+  border-radius: 50px;
+  justify-content: center;
+  margin-right: 30px;
 }/*# sourceMappingURL=style.css.map */
