--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,25 +1,18 @@
 @import "vars"
-
-
 body
     font-family: sans-serif
-
 img
-    max-width: 100%    
-
-
+    max-width: 100% 
 .container
     max-width: 1170px
     width:96%
     margin: auto
-
+    @media  (max-width: 640px)
+        width: 90%
 .button
     background-color: $buttons
     color: $accent
     border: none
-
-
-
 .header
     padding: 20px 0
     &-block
@@ -34,8 +27,7 @@ img
         flex-direction: column
         justify-content: center
         @media  (max-width: 640px)
-            display: none
-            
+            display: none            
     &__adres
         color: $accent
         font-size: 13px
@@ -52,6 +44,68 @@ img
         border-radius: 10px
         margin-left: 30px  
         font-size: 13px
+.main
+    background-color: $grey
+    &-block 
+        display: flex
+        padding: 40px 0 15px
+        @media  (max-width: 1200px)
+            flex-direction: column            
+    &-text 
+        flex-basis: 50%
+        @media  (max-width: 1200px)
+            margin-bottom: 30px
+        &__title
+            font-size: 41px
+            color:   $accent
+            padding-right: 200px 
+            line-height: 55px
+            margin: 45px 0 20px 0
+            @media  (max-width: 1200px)
+                padding-right: 10px
+            @media  (max-width: 640px) 
+                font-size: 30px  
+                line-height: 1.4 
+        &__subtitle 
+            font-size: 20px
+            line-height: 65px
+            color:   $accent
+             @media  (max-width: 640px) 
+                font-size: 16px  
+                line-height: 1.4 
+    &-image 
+        margin-right: -55px 
+        @media  (max-width: 1200px) 
+            width: 100%             
+    &-list 
+        margin: 40px 0 0 0 
+        padding: 0 0 0 0
+        @media  (max-width: 640px) 
+            margin: 30px 0 0 0             
+        &__item 
+            display: flex
+            align-items: center
+            margin-bottom: 20px
+             @media  (max-width: 640px)
+                margin-bottom: 15px
+        &__image
+            width: 40px
+            height: 40px
+            border: 2px solid #ffd200
+            display: flex
+            align-items: center
+            border-radius: 50px
+            justify-content: center
+            margin-right: 30px
+        &__text 
+            line-height: 24px
+            font-size: : 14px  
+            color:   $accent  
+            max-width: 300px
+            @media  (max-width: 640px) 
+                font-size: 12px
+                max-width: 250px
+
 
 
 
