--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -70,7 +70,7 @@ img
             font-size: 20px
             line-height: 65px
             color:   $accent
-             @media  (max-width: 640px) 
+            @media  (max-width: 640px) 
                 font-size: 16px  
                 line-height: 1.4 
     &-image 
@@ -86,7 +86,7 @@ img
             display: flex
             align-items: center
             margin-bottom: 20px
-             @media  (max-width: 640px)
+            @media  (max-width: 640px)
                 margin-bottom: 15px
         &__image
             width: 40px
@@ -99,12 +99,12 @@ img
             margin-right: 30px
         &__text 
             line-height: 24px
-            font-size: : 14px  
+            font-size:  14px  
             color:   $accent  
             max-width: 300px
             @media  (max-width: 640px) 
                 font-size: 12px
-                max-width: 250px
+                max-width: 250px   
 
 
 
