--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,7 @@
 @import "vars"
+@import "fonts"
 body
-    font-family: sans-serif
+   +reg
 img
     max-width: 100% 
 .container
@@ -13,6 +14,7 @@ img
     background-color: $buttons
     color: $accent
     border: none
+    +bold 
 .header
     padding: 20px 0
     &-block
@@ -39,6 +41,7 @@ img
         text-decoration: none 
         display:  block
         margin-top: 5px
+        +bold 
     &__button
         padding: 18px 47px  
         border-radius: 10px
@@ -60,6 +63,7 @@ img
             color:   $accent
             padding-right: 200px 
             line-height: 55px
+            +bold 
             margin: 45px 0 20px 0
             @media  (max-width: 1200px)
                 padding-right: 10px
