--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,7 @@
 @import "vars"
 @import "fonts"
+*
+    box-sizing: border-box
 body
    +reg
 img
@@ -15,6 +17,18 @@ img
     color: $accent
     border: none
     +bold 
+    cursor: pointer
+    padding: 18px 47px
+    border-radius: 10px
+    &:hover
+        background-color: lighten($buttons, 10%)
+
+.input
+    border: 1px solid $border-input
+    font-size: 15px
+    border-radius: 10px
+    padding: 20px 25px
+
 .header
     padding: 20px 0
     &-block
@@ -90,6 +104,8 @@ img
             display: flex
             align-items: center
             margin-bottom: 20px
+            &:last-child
+                margin-bottom: 0
             @media  (max-width: 640px)
                 margin-bottom: 15px
         &__image
@@ -108,7 +124,106 @@ img
             max-width: 300px
             @media  (max-width: 640px) 
                 font-size: 12px
-                max-width: 250px   
+                max-width: 250px 
+.offer
+    padding: 90px 0
+    background: url('../img/offer-bg.jpg') no-repeat
+    background-position: center right
+    background-size: contain
+    position: relative
+    @media (max-width: 1200px)
+        background-size: cover 
+    @media (max-width: 768px)
+        background: #fff
+    &:before
+        content: ''
+        width: 50%
+        height: 100%
+        position: absolute
+        background-color: #fff 
+        top: 0
+        left:0
+        
+    &-block 
+        width: 50%  
+        padding-right: 90px
+        position: relative
+        @media (max-width: 768px)
+            width: 100%
+            padding-right: 0
+    &-title 
+        font-size: 24px
+        line-height: 35px
+        margin-bottom: 25px
+        max-width: 350px
+        +bold 
+    &-subtitle
+        display: inline-block
+        max-width: 260px
+        font-size: 16px
+        margin-bottom: 30px 
+    &__input 
+        margin-bottom: 30px
+        width: 240px        
+        @media (max-width: 1200px) 
+            width: 100%
+            margin-bottom: 15px
+        &:first-child 
+            margin-right: 10px
+    &__button        
+        width: 100%
+        min-height: 70px  
+        margin-bottom: 30px 
+        cursor: pointer
+        @media (max-width: 1200px)
+        font-size: 13px
+        @media (max-width: 768px)
+        font-size: 16px
+    &__info
+        display: flex
+        justify-content: space-between    
+       
+    &-p         
+        width: 171px
+        height: 39px 
+        color: $accent
+        font-size: 15px
+        font-weight: 400
+        line-height: 24px
+        text-align: left
+        margin-top:2px
+    
+
+    &__text
+        display: flex
+        width: 168px
+        height: 15px
+        color: $accent
+        font-size: 15px
+        font-weight: 400
+        line-height: 24px
+        text-align: left
+    &__phone
+        display: flex
+        width: 124px
+        height: 12px    
+        color: $accent
+        font-size: 15px
+        font-weight: 400
+        line-height: 24px
+        text-align: left
+        text-decoration: none
+        margin-top: 10px
+        +bold 
+
+
+
+             
+   
+        
+
+
+
 
 
 
