--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -181,7 +181,8 @@ img
         font-size: 16px
     &__info
         display: flex
-        justify-content: space-between    
+        justify-content: space-between 
+        
        
     &-p         
         width: 171px
@@ -192,8 +193,7 @@ img
         line-height: 24px
         text-align: left
         margin-top:2px
-    
-
+        
     &__text
         display: flex
         width: 168px
@@ -215,6 +215,32 @@ img
         text-decoration: none
         margin-top: 10px
         +bold 
+
+.modal
+    position: fixed
+    left: 0
+    top: 0
+    width: 100%
+    height: 100%
+    border-color: rgba(#000, .5 )    
+    display: none
+    &_active
+        display: flex
+        
+    &-dialog 
+        margin: auto
+        max-width: 450px
+        width: 90%
+        min-height: 200px
+        background-color: #fff
+        padding: 40px
+        position: relative  
+        &__close
+            position: absolute
+            right: 0
+            top: 0
+
+           
 
 
 
