--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -29,6 +29,14 @@ img
     border-radius: 10px
     padding: 20px 25px
 
+.section-title
+    font-size: 30px
+    +bold 
+    text-align: center
+    line-height: 45px
+   
+
+
 .header
     padding: 20px 0
     &-block
@@ -215,6 +223,29 @@ img
         text-decoration: none
         margin-top: 10px
         +bold 
+
+.portfolio
+    padding: 100px 0
+    background: $grey url('../img/portfolio-bg.png') left repeat-y
+    background-size: 50%   
+    &__title
+        margin-bottom: 100px
+        color: $accent
+    &__arrows
+        max-width: 120px
+        display: flex
+        justify-content: space-between
+        margin: auto
+        margin-top: 70px
+
+.arrows__left, .arrows__right
+    cursor: pointer  
+.slider
+    &__image
+        margin: auto              
+
+
+
 
 .modal
     position: fixed
