--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,6 +4,10 @@
     box-sizing: border-box
 body
    +reg
+   @media  (max-width: 320px)
+    height: 10231px    
+    opacity: -1
+
 img
     max-width: 100% 
 .container
@@ -233,10 +237,15 @@ img
 .portfolio
     padding: 100px 0
     background: $grey url('../img/portfolio-bg.png') left repeat-y
-    background-size: 50%   
+    background-size: 50% 
+    @media (max-width: 806px)
+        padding: 40px 0        
     &__title
         margin-bottom: 100px
         color: $accent
+        @media (max-width: 806px)
+            font-size: 18px
+            margin-bottom: 40px
     &__arrows
         max-width: 120px
         display: flex
@@ -252,8 +261,13 @@ img
 
 .price
     padding: 100px 0
+    @media (max-width: 806px)
+        padding: 0
     &__title
         margin-bottom: 60px
+        @media (max-width: 806px)
+            margin-bottom: 26px
+            font-size: 18px  
     &__subtitle
         margin-bottom: 60px 
     &__card
@@ -265,9 +279,11 @@ img
     flex-wrap: wrap
     justify-content: space-between
     @media (max-width: 1200px)
-        width: 50%
-    @media (max-width: 795px)
+        width: 100%  
+        justify-content: center          
+    @media (max-width: 806px)
         width: 100%
+        justify-content: flex-center
 
 .card
     text-align: center
@@ -277,7 +293,7 @@ img
         box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1)
         .card__image::before
             opacity: 1
-                &__text
+    &__text
         padding: 40px
     &__title
         margin-top: 0 
@@ -321,6 +337,89 @@ img
             background-color: $main-color
             transition: .2s
 
+.steps
+    padding-bottom: 120px 
+    @media (max-width: 806px) 
+        padding-bottom: 70px 
+    &__title
+        margin-bottom: 60px
+        @media (max-width: 806px)
+            font-size: 18px
+    &__subtitle
+        margin-bottom: 75px
+        
+.icons
+    display: flex
+    justify-content: space-between
+    @media (max-width: 1200px)
+        width: 50%         
+        flex-wrap: wrap 
+        justify-content: center   
+    @media (max-width: 768px)
+        width: 100%   
+        display: block 
+        justify-content: space-between    
+.icon
+    text-align: center
+    position: relative
+    &:last-child
+        &::after
+            display: none
+    &::after
+        content: ''
+        position: absolute
+        top: -10px
+        right: -95px
+        display: block
+        width: 72px
+        height: 25px
+        background-image: url('../img/iconArowwRight.png')
+        @media (max-width: 1200px)
+            display: none
+       
+    &__image
+        width: 100px
+        height: 100px
+        margin: auto  
+        border: 3px solid #ffd200
+        background-color: #fff
+        border-radius: 100px
+        display: flex
+        justify-content:  center
+        align-items: center
+        margin-bottom: 30px
+        img 
+            width: 30px
+            height: 30px
+            display: inline-block
+    &__text
+        max-width: 140px
+        display: inline-block 
+        font-size: 14px   
+        line-height: 20px
+
+.notice
+    background-color: $second
+    padding: 100px 0
+    @media (max-width: 806px)
+        padding-top: 70px 
+        padding-bottom: 80px
+    &__text
+        text-align: center
+        font-size: 32px
+        max-width: 750px
+        margin: auto
+        line-height: 50px
+        font-weight: 300  
+        @media (max-width: 780px)
+            font-size: 18px
+            +bold
+        @media (max-width: 380px)
+            max-width: 250px
+            font-size: 14px 
+            +bold    
+           
+        
 .modal
     position: fixed
     left: 0
