--- a/src/css/style.css
+++ b/src/css/style.css
@@ -597,6 +597,80 @@ img {
   }
 }
 
+.info {
+  padding: 100px 0;
+}
+.info__block {
+  margin-bottom: 150px;
+}
+
+.benefits {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 1200px) {
+  .benefits {
+    display: block;
+    text-align: center;
+  }
+}
+
+.benefit {
+  background-color: #f7f7f7;
+  height: 410px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 370px;
+  position: relative;
+}
+.benefit__image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.benefit__text {
+  margin: 26px 100px 0 26px;
+  font-size: 16px;
+  line-height: 23px;
+}
+.benefit__text strong {
+  font-family: "Museo Sans Bold", sans-serif;
+  font-weight: 700;
+}
+@media (max-width: 420px) {
+  .benefit__text {
+    font-size: 10px;
+  }
+}
+
+.documents__title {
+  margin-bottom: 100px;
+}
+@media (max-width: 500px) {
+  .documents__title {
+    font-size: 18px;
+    margin-bottom: 40px;
+  }
+}
+
+.documents-block {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 1200px) {
+  .documents-block {
+    display: block;
+    text-align: center;
+  }
+}
+.documents-block__text {
+  text-align: center;
+  margin-top: 40px;
+  line-height: 24px;
+  font-size: 18px;
+}
+
 .modal {
   position: fixed;
   left: 0;
