--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -417,7 +417,64 @@ img
         @media (max-width: 380px)
             max-width: 250px
             font-size: 14px 
-            +bold    
+            +bold 
+.info
+    padding: 100px 0     
+    &__block
+        margin-bottom: 150px
+                      
+
+.benefits
+    display: flex
+    justify-content: space-between
+    @media  (max-width: 1200px)
+        display: block                
+        text-align: center
+        
+
+
+.benefit
+    background-color: $bebefit-bg
+    height: 410px
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    max-width: 370px
+    position: relative   
+    &__image
+        position: absolute
+        bottom: 0
+        left: 0
+    &__text
+        margin: 26px 100px 0 26px
+        font-size: 16px
+        line-height: 23px
+        strong
+            +bold
+        @media  (max-width: 420px)
+            font-size: 10px
+
+.documents__title  
+    margin-bottom: 100px
+    @media  (max-width: 500px)
+        font-size: 18px
+        margin-bottom: 40px
+
+.documents-block
+    display: flex   
+    justify-content: space-between 
+    @media  (max-width: 1200px)
+        display: block         
+        text-align: center
+    &__text
+        text-align: center        
+        margin-top: 40px
+        line-height: 24px
+        font-size: 18px
+        
+
+
+
            
         
 .modal
