--- a/src/css/style.css
+++ b/src/css/style.css
@@ -831,6 +831,78 @@ img {
   font-size: 15px;
 }
 
+.footer {
+  position: relative;
+}
+
+.map {
+  width: 50%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.contacts {
+  flex-basis: 50%;
+  padding-top: 100px;
+  padding-left: 200px;
+}
+@media (max-width: 1200px) {
+  .contacts {
+    padding-top: 60px;
+    padding-right: 18px;
+    padding-left: 24px;
+  }
+}
+.contacts-block {
+  display: flex;
+  justify-content: flex-end;
+}
+.contacts__title {
+  font-family: "Museo Sans Bold", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 33px;
+  margin-bottom: 100px;
+}
+@media (max-width: 1200px) {
+  .contacts__title {
+    font-size: 18px;
+    line-height: 24px;
+    margin-top: 67px;
+  }
+}
+.contacts-list {
+  padding: 0;
+  list-style-type: none;
+}
+.contacts-list__icon {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  margin-right: 20px;
+}
+.contacts-list__item {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 40px;
+}
+.contacts-list__item strong {
+  font-family: "Museo Sans Bold", sans-serif;
+  font-weight: 700;
+}
+.contacts-list__text {
+  line-height: 1.4;
+}
+.contacts-list__text a {
+  color: #000;
+  text-decoration: none;
+}
+.contacts-list__text a:hover {
+  text-decoration: underline;
+}
+
 .modal {
   position: fixed;
   left: 0;
@@ -856,4 +928,8 @@ img {
   position: absolute;
   right: 0;
   top: 0;
+}
+
+.error {
+  border: 2px solid red;
 }/*# sourceMappingURL=style.css.map */
