--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -577,8 +577,64 @@ img
     &__description
         font-size: 15px
 
+.footer
+    position: relative
+    
+       
+.map
+    width: 50%
+    position: absolute
+    left: 0
+    top: 0
+   
 
+   
+    
+.contacts
+    flex-basis: 50%
+    padding-top: 100px
+    padding-left: 200px
+    @media  (max-width: 1200px)
+        padding-top: 60px
+        padding-right: 18px
+        padding-left: 24px
+    
+    &-block 
+        display: flex
+        justify-content: flex-end
 
+        
+    &__title
+        +bold 
+        font-size: 24px
+        line-height: 33px
+        margin-bottom: 100px
+        @media  (max-width: 1200px)
+            font-size: 18px
+            line-height: 24px
+            margin-top: 67px
+    &-list
+        padding: 0
+        list-style-type: none
+        &__icon
+            width: 20px
+            height: 20px
+            text-align: center
+            line-height: 20px
+            margin-right: 20px
+        &__item
+            display: flex
+            align-items: flex-start
+            margin-bottom: 40px
+            strong
+                +bold 
+        &__text
+            line-height: 1.4 
+            a
+                color: $text-color
+                text-decoration: none   
+                &:hover
+                    text-decoration: underline    
 
            
         
@@ -606,6 +662,8 @@ img
             right: 0
             top: 0
 
+.error
+    border: 2px solid red     
            
 
 
