--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -586,7 +586,9 @@ img
     position: absolute
     left: 0
     top: 0
-   
+    @media  (max-width: 768px)        
+        width: 100% 
+        position: relative
 
    
     
@@ -598,12 +600,15 @@ img
         padding-top: 60px
         padding-right: 18px
         padding-left: 24px
+        
     
     &-block 
         display: flex
         justify-content: flex-end
-
-        
+        @media  (max-width: 768px)
+            justify-content: center 
+        @media  (max-width: 550px)
+            display: block           
     &__title
         +bold 
         font-size: 24px
@@ -613,6 +618,7 @@ img
             font-size: 18px
             line-height: 24px
             margin-top: 67px
+            
     &-list
         padding: 0
         list-style-type: none
